--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./style.css">
-	<link rel="stylesheet" type="text/css" href="./dist/Toaster.css">
+	<link rel="stylesheet" type="text/css" href="./dist/toaster.css">
 
-	<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js" defer></script>
 	<script type="text/javascript" src="./dist/toaster.js" defer></script>
 	<script type="text/javascript" src="./app.js" defer></script>
 </head>
